# django

./: build.sh  db.sqlite3  pyproject.toml
members/: urls.py
members/static/members/: style.css
members/templates/authenticate/: login.html
mysite/: settings.py
mysite2/: pyproject.toml  settings.py  urls.py
mysite2/members/: forms.py  views.py
mysite2/members/templates/authenticate/: register.html
mysite2/mysite2/: settings.py
mysite2/render/: admin.py  models.py
mysite2/render/templates/render/: home.html  patient_list.html  update_patient.html
render/: forms.py  tests.py  urls.py  views.py
render/migrations/: 0001_initial.py
render/static/render/: style.css
render/templates/render/: add_patient.html  base.html
